--- a/week8/k8s_django_deployment_task/helm-chart/templates/deployment.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/deployment.yaml
@@ -17,7 +17,14 @@ spec:
           image: {{ .Values.image.imageName }}
           imagePullPolicy: {{ .Values.image.imagePullPolicy }}
           ports:
-            - containerPort: 8080
+            - containerPort: 8000
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
           env:
             - name: DATABASE_URL
               valueFrom:
