--- a/week8/k8s_django_deployment_task/helm-chart/templates/configmap.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Chart.Name }}-config
+  namespace: {{ .Release.Namespace }}
 data:
   {{- range $key, $value := .Values.config }}
   {{ $key }}: "{{ $value }}"
