--- a/week8/k8s_django_deployment_task/helm-chart/templates/secrets.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/secrets.yaml
@@ -2,9 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Chart.Name }}-secret
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
-  DATABASE_URL: {{ printf "postgres://%s:%s@%s:5432/%s" .Values.secret.DB_USER .Values.secret.DB_PASSWORD .Values.config.HOST .Values.config.DB_NAME | quote }}
-  {{- range $key, $value := .Values.secret }}
-  {{ $key }}: "{{ $value }}"
-  {{- end }}
+  DATABASE_URL: {{ printf "postgres://%s:%s@%s:5432/%s" .Values.config.DB_USER .Values.secret.DB_PASSWORD .Values.config.HOST .Values.config.DB_NAME | quote }}
