--- a/week8/k8s_django_deployment_task/helm-chart/values.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/values.yaml
@@ -1,26 +1,15 @@
 replicaCount: 2
 
 image:
-  imageName: 400375466624.dkr.ecr.us-east-1.amazonaws.com/disablak/django-app:latest #django-app:1.46_clean
+  imageName: 400375466624.dkr.ecr.us-east-1.amazonaws.com/disablak/django-app:latest #django-app:1.47_sessions
   imagePullPolicy: IfNotPresent #Never
 
 config:
   DEBUG: "True"
   DEVELOPMENT_MODE: "False"
+  CSRF_TRUSTED_ORIGINS: "http://*"
+  DJANGO_ALLOWED_HOSTS: "*"
   HOST: "database-k8s.csfeacmg6tz7.us-east-1.rds.amazonaws.com"
   PORT: "5432"
-  DB_NAME: "dbk8s"
-
-secret:
   DB_USER: "postgres"
-  DB_PASSWORD: "somePasssup89{"
-
-env:
-  - name: DEBUG
-    value: "True"
-  - name: DEVELOPMENT_MODE
-    value: "False"
-  - name: CSRF_TRUSTED_ORIGINS
-    value: "*"
-  - name: DJANGO_ALLOWED_HOSTS
-    value: "*"
+  DB_NAME: "dbk8s"
