--- a/week8/k8s_django_deployment_task/helm-chart/templates/ingress.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/ingress.yaml
@@ -7,10 +7,12 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/group.name: my-app-group
 spec:
   ingressClassName: alb
   rules:
-    - http:
+    - host: {{ .Values.host }}
+      http:
         paths:
           - path: /
             pathType: Prefix
