up but not work

--- a/week8/k8s_django_deployment_task/helm-chart/values.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/values.yaml
@@ -1,5 +1,5 @@
 replicaCount: 2
-host: mydjangoapp.com
+host: back2.cloud
 
 image:
   imageName: 400375466624.dkr.ecr.us-east-1.amazonaws.com/disablak/django-app:latest #django-app:1.47_sessions
