--- a/week8/k8s_django_deployment_task/helm-chart/templates/ingress.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/ingress.yaml
@@ -4,12 +4,18 @@ metadata:
   name: my-app-ingress
   namespace: {{ .Release.Namespace }}
   annotations:
+    #kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' #, {"HTTPS": 443}]'
     alb.ingress.kubernetes.io/group.name: my-app-group
+    #cert-manager.io/cluster-issuer: letsencrypt-test
 spec:
   ingressClassName: alb
+#   tls:
+#     - hosts:
+#         - {{ .Values.host }}
+#       secretName: tls-secret
   rules:
     - host: {{ .Values.host }}
       http:
