--- a/week8/k8s_django_deployment_task/helm-chart/templates/clusterissuer.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/clusterissuer.yaml
@@ -1,11 +1,11 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-test
+  name: {{ .Chart.Name }}-letsencrypt
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: verchinskiymax@gmail.com
+    email: {{ .Values.email }}
     privateKeySecretRef:
       name: letsencrypt-test-private-key
     solvers:
