--- a/week8/k8s_django_deployment_task/helm-chart/templates/deployment.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-app
+  name: {{ .Chart.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: my-app
+      app: {{ .Chart.Name }}
   template:
     metadata:
       labels:
-        app: my-app
+        app: {{ .Chart.Name }}
     spec:
       containers:
-        - name: my-app
+        - name: {{ .Chart.Name }}
           image: {{ .Values.image.imageName }}
           imagePullPolicy: {{ .Values.image.imagePullPolicy }}
           ports:
