--- a/week8/k8s_django_deployment_task/helm-chart/templates/hpa.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: my-hpa
+  name: {{ .Chart.Name }}-hpa
   namespace: {{ .Release.Namespace }}
 spec:
   scaleTargetRef:
