--- a/week8/k8s_django_deployment_task/helm-chart/templates/sertificate.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/sertificate.yaml
@@ -1,12 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: my-app-cert
+  name: {{ .Chart.Name }}-cert
   namespace: {{ .Release.Namespace }}
 spec:
   secretName: tls-secret
   issuerRef:
-    name: letsencrypt-test
+    name: {{ .Chart.Name }}-letsencrypt
     kind: ClusterIssuer
   commonName: {{ .Values.host }}
   dnsNames:
