--- a/week8/k8s_django_deployment_task/helm-chart/templates/service.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
+  name: {{ .Chart.Name }}-service
   namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
   selector:
-    app: my-app
+    app: {{ .Chart.Name }}
   ports:
     - port: 80
       targetPort: 8080
