--- a/week8/k8s_django_deployment_task/helm-chart/templates/deployment.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/deployment.yaml
@@ -31,3 +31,10 @@ spec:
                 name: {{ .Chart.Name }}-config
             - secretRef:
                 name: {{ .Chart.Name }}-secret
+          volumeMounts:
+            - name: static-volume
+              mountPath: /usr/src/app/staticfiles
+      volumes:
+        - name: static-volume
+          persistentVolumeClaim:
+            claimName: static-pvc
