--- a/week8/k8s_django_deployment_task/helm-chart/templates/pv.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/pv.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: static-pv
+  name: {{ .Chart.Name }}-pv
+  namespace: {{ .Release.Namespace }}
 spec:
   capacity:
-    storage: 5Gi
+    storage: {{ .Values.pv.capacity }}
   accessModes:
-    - ReadWriteMany
+    - {{ .Values.pv.accessMode }}
   hostPath:
     path: "/mnt/data/static"
