--- a/week8/k8s_django_deployment_task/helm-chart/templates/pvc.yaml
+++ b/week8/k8s_django_deployment_task/helm-chart/templates/pvc.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: static-pvc
+  name: {{ .Chart.Name }}-pvc
+  namespace: {{ .Release.Namespace }}
 spec:
   accessModes:
-    - ReadWriteMany
+    - {{ .Values.pv.accessMode }}
   storageClassName: efs-sc
   resources:
     requests:
-      storage: 5Gi
+      storage: {{ .Values.pv.capacity }}
