--- a/week9/task1/helmfile.yaml
+++ b/week9/task1/helmfile.yaml
@@ -1,40 +1,30 @@
-environments:
-  production:
-    secrets:
-    - helm-chart/secrets.yaml
+# environments:
+#   production:
+#     secrets:
+#     - helm-chart/secrets.yaml
 
----
+# ---
 repositories:
-  - name: jetstack
-    url: https://charts.jetstack.io
   - name: eks
     url: https://aws.github.io/eks-charts
 
 releases:
-  - name: aws-load-balancer-controller
-    namespace: kube-system
-    chart: eks/aws-load-balancer-controller
-    version: 1.13.3
-    installed: true
-    values:
-      - clusterName: my-k8s-cluster
-      - serviceAccount:
-          create: true
-          name: aws-load-balancer-controller
-      - region: us-east-1
+  # - name: aws-load-balancer-controller
+  #   namespace: kube-system
+  #   chart: eks/aws-load-balancer-controller
+  #   version: 1.13.3
+  #   installed: true
+  #   values:
+  #     - clusterName: my-k8s-cluster
+  #     - serviceAccount:
+  #         create: true
+  #         name: aws-load-balancer-controller
+  #     - region: us-east-1
 
-  - name: cert-manager
-    namespace: cert-manager
-    createNamespace: true
-    chart: jetstack/cert-manager
-    version: v1.14.4
-    values:
-      - installCRDs: true
-
-  - name: helm-chart
+  - name: disablak-chart
     namespace: default
-    chart: ./helm-chart
+    chart: ./disablak-chart
     values:
-      - helm-chart/values.yaml
+      - disablak-chart/values.yaml
     secrets:
-      - helm-chart/secrets.enc.yaml
+      - disablak-chart/secrets.enc.yaml
