--- a/week9/task1/disablak-chart/templates/ingress.yaml
+++ b/week9/task1/disablak-chart/templates/ingress.yaml
@@ -4,18 +4,11 @@ metadata:
   name: {{ .Chart.Name }}-ingress
   namespace: {{ .Release.Namespace }}
   annotations:
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
-    cert-manager.io/cluster-issuer: {{ .Chart.Name }}-letsencrypt
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: alb
-  tls:
-    - hosts:
-        - {{ .Values.host }}
-      secretName: tls-secret
+  ingressClassName: nginx
   rules:
-    - host: {{ .Values.host }}
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
