--- a/week10/k8s-cluster-terraform-ansible/ansible/main.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/main.yaml
@@ -15,31 +15,47 @@
 #   roles:
 #     - role: add-hosts
 
-# - name: Generate certificates
-#   hosts: jumpbox
+- name: Generate certificates
+  hosts: jumpbox
+  become: true
+  vars:
+    path_to_certs: "./certs/"
+    ca_key_path: "./certs/ca.key"
+    ca_cert_path: "./certs/ca.crt"
+    ca_config_path: "./certs/ca.conf"
+    certs:
+      - admin
+      - node-0
+      - node-1
+      - kube-proxy
+      - kube-scheduler
+      - kube-controller-manager
+      - kube-api-server
+      - service-accounts
+  roles:
+    - role: generate-certs
+
+# - name: Distribute certificates to nodes
+#   hosts: nodes
 #   become: true
 #   vars:
-#     path_to_certs: "./certs/"
-#     ca_key_path: "./certs/ca.key"
-#     ca_cert_path: "./certs/ca.crt"
-#     ca_config_path: "./certs/ca.conf"
-#     certs:
-#       - admin
-#       - node-0
-#       - node-1
-#       - kube-proxy
-#       - kube-scheduler
-#       - kube-controller-manager
-#       - kube-api-server
-#       - service-accounts
+#     dest_dir: "/var/lib/kubelet/"
+#     path_to_certs: "./certs/" # copy
 #   roles:
-#     - role: generate-certs
+#     - role: distribute-certs-to-nodes
 
-- name: Distribute certificates to nodes
-  hosts: nodes
+- name: Distribute certificates to server
+  hosts: server
   become: true
   vars:
     dest_dir: "/var/lib/kubelet/"
     path_to_certs: "./certs/" # copy
+    certs:
+      - ca.key
+      - ca.crt
+      - kube-api-server.key
+      - kube-api-server.crt
+      - service-accounts.key
+      - service-accounts.crt
   roles:
-    - role: distribute-certs-to-nodes
+    - role: distribute-certs-to-server
