--- a/week10/k8s-cluster-terraform-ansible/ansible/roles/generate-certs/tasks/main.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/roles/generate-certs/tasks/main.yaml
@@ -4,6 +4,12 @@
     size: 4096
     type: RSA
 
+- name: Change ownership of private key
+  ansible.builtin.file:
+    path: "{{ ca_key_path }}"
+    owner: "{{ lookup('env', 'USER') }}"
+    mode: '0600'
+
 - name: Generate self-signed CA certificate
   community.crypto.x509_certificate:
     path: "{{ ca_cert_path }}"
@@ -16,6 +22,13 @@
     path: "{{ path_to_certs }}{{ item }}.key"
     size: 4096
     type: RSA
+  loop: "{{ certs }}"
+
+- name: Change ownership of private keys to each cert
+  ansible.builtin.file:
+    path: "{{ path_to_certs }}{{ item }}.key"
+    owner: "{{ lookup('env', 'USER') }}"
+    mode: '0600'
   loop: "{{ certs }}"
 
 - name: Generate CSR for each cert
