--- a/week10/k8s-cluster-terraform-ansible/ansible/roles/distribute-certs-to-server/tasks/main.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/roles/distribute-certs-to-server/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: Copy each certificate file to ~/ on server
   ansible.builtin.copy:
     src: "{{ path_to_certs }}{{ item }}"
-    dest: "/root/{{ item }}"
+    dest: "/"
     owner: root
     group: root
     mode: '0600'
