--- a/week10/k8s-cluster-terraform-ansible/ansible/07-bootstrapping-etcd.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/07-bootstrapping-etcd.yaml
@@ -8,5 +8,6 @@
       - "./../kubernetes-the-hard-way/downloads/client/etcdctl"
       - "./../kubernetes-the-hard-way/units/etcd.service"
   roles:
+    - role: copy-many-files
     - role: copy-etcd-files-to-server
 
