--- a/week10/k8s-cluster-terraform-ansible/ansible/roles/move-kubeconfig-to-server/tasks/main.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/roles/move-kubeconfig-to-server/tasks/main.yaml
@@ -6,5 +6,6 @@
     group: root
     mode: '0600'
   loop:
+    - admin.kubeconfig
     - kube-controller-manager.kubeconfig
     - kube-scheduler.kubeconfig
