--- a/week10/k8s-cluster-terraform-ansible/ansible/04-certificate-authority.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/04-certificate-authority.yaml
@@ -1,22 +1,22 @@
-- name: Generate certificates
-  hosts: jumpbox
-  become: true
-  vars:
-    path_to_certs: "./certs/"
-    ca_key_path: "./certs/ca.key"
-    ca_cert_path: "./certs/ca.crt"
-    ca_config_path: "./certs/ca.conf"
-    certs:
-      - admin
-      - node-0
-      - node-1
-      - kube-proxy
-      - kube-scheduler
-      - kube-controller-manager
-      - kube-api-server
-      - service-accounts
-  roles:
-    - role: generate-certs
+# - name: Generate certificates
+#   hosts: jumpbox
+#   become: true
+#   vars:
+#     path_to_certs: "./certs/"
+#     ca_key_path: "./certs/ca.key"
+#     ca_cert_path: "./certs/ca.crt"
+#     ca_config_path: "./certs/ca.conf"
+#     certs:
+#       - admin
+#       - node-0
+#       - node-1
+#       - kube-proxy
+#       - kube-scheduler
+#       - kube-controller-manager
+#       - kube-api-server
+#       - service-accounts
+#   roles:
+#     - role: generate-certs
 
 - name: Distribute certificates to nodes
   hosts: nodes
