--- a/week10/k8s-cluster-terraform-ansible/ansible/roles/provisioning-kube-control-plane/tasks/main.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/roles/provisioning-kube-control-plane/tasks/main.yaml
@@ -102,3 +102,9 @@
     - kube-apiserver
     - kube-controller-manager
     - kube-scheduler
+
+- name: Apply kube-apiserver-to-kubelet.yaml
+  kubernetes.core.k8s:
+    state: present
+    src: /kube-apiserver-to-kubelet.yaml
+    kubeconfig: /admin.kubeconfig
