--- a/week10/k8s-cluster-terraform-ansible/ansible/main.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/main.yaml
@@ -2,5 +2,5 @@
 # - import_playbook: 04-certificate-authority.yaml
 # - import_playbook: 05-kube-configuration-files.yaml
 # - import_playbook: 06-generate-data-enc-config-and-key.yaml
-- import_playbook: 07-bootstrapping-etcd.yaml
+# - import_playbook: 07-bootstrapping-etcd.yaml
 - import_playbook: 08-bootstrapping-kubernetes-controllers.yaml
