--- a/week10/k8s-cluster-terraform-ansible/ansible/roles/configuring/tasks/main.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/roles/configuring/tasks/main.yaml
@@ -27,3 +27,15 @@
     name: systemd-hostnamed
     state: restarted
     daemon_reload: true
+
+- name: Install python3-pip
+  ansible.builtin.apt:
+    name: python3-pip
+    state: present
+    update_cache: true
+
+- name: Install kubernetes Python module forcibly
+  ansible.builtin.pip:
+    name: kubernetes
+    executable: pip3
+    extra_args: --break-system-packages
