--- a/week10/k8s-cluster-terraform-ansible/ansible/main.yaml
+++ b/week10/k8s-cluster-terraform-ansible/ansible/main.yaml
@@ -1,8 +1,10 @@
-# - import_playbook: 03-compute-resource.yaml
-# - import_playbook: 04-certificate-authority.yaml
-# - import_playbook: 05-kube-configuration-files.yaml
-# - import_playbook: 06-generate-data-enc-config-and-key.yaml
-# - import_playbook: 07-bootstrapping-etcd.yaml
-# - import_playbook: 08-bootstrapping-kubernetes-controllers.yaml
-# - import_playbook: 09-bootstrapping-kubernetes-worker-nodes.yaml
+- import_playbook: 03-compute-resource.yaml
+- import_playbook: 04-certificate-authority.yaml
+- import_playbook: 05-kube-configuration-files.yaml
+- import_playbook: 06-generate-data-enc-config-and-key.yaml
+- import_playbook: 07-bootstrapping-etcd.yaml
+- import_playbook: 08-bootstrapping-kubernetes-controllers.yaml
+- import_playbook: 09-bootstrapping-kubernetes-worker-nodes.yaml
 - import_playbook: 10-configuring-kubectl.yaml
+- import_playbook: 11-pod-network-routes.yaml
+- import_playbook: 12-smoke-test.yaml
