--- a/week10/task3/disablak-chart/templates/deployment.yaml
+++ b/week10/task3/disablak-chart/templates/deployment.yaml
@@ -4,7 +4,9 @@ metadata:
   name: {{ .Chart.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
+  {{- if not .Values.hpa.enabled }}
   replicas: {{ .Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
@@ -15,7 +17,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: {{ .Values.image.imageName }}
+          image: {{ required "image.imageName is required!" .Values.image.imageName }}
           imagePullPolicy: {{ .Values.image.imagePullPolicy }}
           ports:
             - containerPort: 8080
