--- a/week10/task3/disablak-chart/templates/ns.yaml
+++ b/week10/task3/disablak-chart/templates/ns.yaml
@@ -1,7 +1,7 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: my-space
-  labels:
-    pod-security.kubernetes.io/enforce: restricted
-    pod-security.kubernetes.io/enforce-version: latest
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: my-space
+#   labels:
+#     pod-security.kubernetes.io/enforce: restricted
+#     pod-security.kubernetes.io/enforce-version: latest
