--- a/week10/task3/disablak-chart/tests/deployment_test.yaml
+++ b/week10/task3/disablak-chart/tests/deployment_test.yaml
@@ -2,15 +2,20 @@ suite: test deployment
 templates:
   - deployment.yaml
 tests:
-  - it: should work
-    set:
-      image.tag: latest
+  - it: should be valid deployment
+    templates:
+      - deployment.yaml
     asserts:
       - isKind:
           of: Deployment
-      - matchRegex:
-          path: metadata.name
-          pattern: disablak-chart
-      - equal:
-          path: spec.template.spec.containers[0].image
-          value: 104280348236.dkr.ecr.us-east-1.amazonaws.com/disablak/django-app:latest
+      - hasDocuments:
+          count: 1
+      - isNotNullOrEmpty:
+          path: spec.template.spec.containers[?(@.name == "basic")]
+
+  - it: shouldn't render replicas in deployment if hpa enabled
+    set:
+      ingress.enabled: true
+    asserts:
+      - notExists:
+          path: spec.replicas
