--- a/week10/task3/disablak-chart/Chart.yaml
+++ b/week10/task3/disablak-chart/Chart.yaml
@@ -1,9 +1,11 @@
 apiVersion: v2
 name: disablak-chart
 description: A Helm chart for Kubernetes
-
 type: application
-
 version: 0.1.1
-
 appVersion: "1.16.0"
+
+dependencies:
+  - name: my-lib
+    version: 0.1.0
+    repository: "file://../my-lib"
