--- a/week10/task3/disablak-chart/templates/configmap.yaml
+++ b/week10/task3/disablak-chart/templates/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Chart.Name }}-config
-  namespace: {{ .Release.Namespace }}
+  {{- include "my-lib.labels" . | nindent 4 }}
 data:
   {{- range $key, $value := .Values.config }}
   {{ $key }}: "{{ $value }}"
