--- a/week10/task3/disablak-chart/templates/ingress.yaml
+++ b/week10/task3/disablak-chart/templates/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Chart.Name }}-ingress
-  namespace: {{ .Release.Namespace }}
+  {{- include "my-lib.labels" . | nindent 4 }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
