--- a/week10/task3/disablak-chart/templates/secrets.yaml
+++ b/week10/task3/disablak-chart/templates/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Chart.Name }}-secret
-  namespace: {{ .Release.Namespace }}
+  {{- include "my-lib.labels" . | nindent 4 }}
 type: Opaque
 stringData:
   DATABASE_URL: {{ printf "postgres://%s:%s@%s:5432/%s" .Values.config.DB_USER .Values.secret.DB_PASSWORD .Values.config.HOST .Values.config.DB_NAME | quote }}
