--- a/week10/task3/disablak-chart/templates/service.yaml
+++ b/week10/task3/disablak-chart/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Chart.Name }}-service
-  namespace: {{ .Release.Namespace }}
+  {{- include "my-lib.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
